Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.3.0 RC1
-
Fix Version/s: 5.3.0
-
Component/s: GUI: Window management
-
Labels:
-
Environment:Windows Runtime 8.1
-
Platform/s:
-
Commits:3f885939c059605a9324a94e488793455c9cd848
Description
The WinRT QPA is incorrectly passing multi-touch events with different devices on each touch update.
Attachments
For Gerrit Dashboard: QTBUG-38745 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
84533,3 | WinRT: Fix multi-touch on PC | release | qt/qtbase | Status: MERGED | +2 | 0 |